--- a/SortingAndSearchingAlgorithms/SortingAlgorythms/SortingAlgorythms.csproj
+++ b/SortingAndSearchingAlgorithms/SortingAlgorythms/SortingAlgorythms.csproj
@@ -44,11 +44,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bubble.cs" />
+    <Compile Include="CountingSort.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Insertion.cs" />
     <Compile Include="MergeSort.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuickSort.cs" />
     <Compile Include="Selection.cs" />
     <Compile Include="Shuffle.cs" />
   </ItemGroup>
